--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="header.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/header.css">
   <title>Alura Geek</title>
 </head>
 <body>
   <header class="header container">
-    <img src="images/Logo.png" alt="Logo da Alura Geek">
+    <img class="header__logo" src="images/Logo.png" alt="Logo da Alura Geek">
+    <div class="header__container">
+      <input  class="header__pesquisa" type="text" 
+      placeholder="O que deseja encontrar?">
+      <input class="header__login" type="button" value="Login">
+     </div>
   </header>
 </body>
 </html>
