Terminado a section banner

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/banner.css">
   <title>Alura Geek</title>
 </head>
 <body>
@@ -21,5 +22,12 @@
       <input class="header__login" type="button" value="Login">
      </div>
   </header>
+  <section class="banner">
+    <div class="banner__container container">
+      <h1 class="banner__titulo">Dezembro Promocional</h1>
+      <p class="banner__conteudo">Produtos selecionados com 33% de desconto</p>
+      <button class="banner__consoles">Ver Consoles</button>
+    </div>
+  </section>
 </body>
 </html>
