Terminado a section produtos e o footer

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/banner.css">
+  <link rel="stylesheet" href="css/produtos.css">
+  <link rel="stylesheet" href="css/footer.css">
   <title>Alura Geek</title>
 </head>
 <body>
@@ -22,12 +24,183 @@
       <input class="header__login" type="button" value="Login">
      </div>
   </header>
-  <section class="banner">
-    <div class="banner__container container">
-      <h1 class="banner__titulo">Dezembro Promocional</h1>
-      <p class="banner__conteudo">Produtos selecionados com 33% de desconto</p>
-      <button class="banner__consoles">Ver Consoles</button>
+  <main>
+    <section class="banner">
+      <div class="banner__container container">
+        <h1 class="banner__titulo">Dezembro Promocional</h1>
+        <p class="banner__conteudo">Produtos selecionados com 33% de desconto</p>
+        <button class="banner__consoles">Ver Consoles</button>
+      </div>
+    </section>
+    <section class="produtos star-wars container">
+      <div class="produtos__container">
+        <h2 class="produtos__titulo">Star Wars</h2>
+        <div class="produtos__mostrar-mais">
+          <a href="#"><span class="produtos__mostrar-mais__link">Ver tudo</span></a>
+          <img class="produtos__mostrar-mais__imagem" src="images/seta.png">
+        </div>
+      </div>
+      <div class="produtos__lista">
+        <div class="produtos__item">
+          <img class="produtos__item-imagem" src="images/star1.png" alt="Produto XYZ">
+          <p class="produto__item-titulo">Produto XYZ</p>
+          <p class="produto__item-descricao">R$ 60,00</p>
+          <a class="produto__item-link"><p>Ver produto</p></a>
+        </div>
+        <div class="produtos__item">
+          <img class="produtos__item-imagem" src="images/star2.png" alt="Produto XYZ">
+          <p class="produto__item-titulo">Produto XYZ</p>
+          <p class="produto__item-descricao">R$ 60,00</p>
+          <a class="produto__item-link"><p>Ver produto</p></a>
+        </div>
+        <div class="produtos__item">
+          <img class="produtos__item-imagem" src="images/star3.png" alt="Produto XYZ">
+          <p class="produto__item-titulo">Produto XYZ</p>
+          <p class="produto__item-descricao">R$ 60,00</p>
+          <a class="produto__item-link"><p>Ver produto</p></a>
+        </div>
+        <div class="produtos__item">
+          <img class="produtos__item-imagem" src="images/star4.png" alt="Produto XYZ">
+          <p class="produto__item-titulo">Produto XYZ</p>
+          <p class="produto__item-descricao">R$ 60,00</p>
+          <a class="produto__item-link"><p>Ver produto</p></a>
+        </div>
+        <div class="produtos__item">
+          <img class="produtos__item-imagem" src="images/star5.png" alt="Produto XYZ">
+          <p class="produto__item-titulo">Produto XYZ</p>
+          <p class="produto__item-descricao">R$ 60,00</p>
+          <a class="produto__item-link"><p>Ver produto</p></a>
+        </div>
+        <div class="produtos__item">
+          <img class="produtos__item-imagem" src="images/star6.png" alt="Produto XYZ">
+          <p class="produto__item-titulo">Produto XYZ</p>
+          <p class="produto__item-descricao">R$ 60,00</p>
+          <a class="produto__item-link"><p>Ver produto</p></a>
+        </div>
+      </div>
+      
+    </section>
+    <section class="produtos consoles container">
+      <div class="produtos__container">
+        <h2 class="produtos__titulo">Consoles</h2>
+        <div class="produtos__mostrar-mais">
+          <a href="#"><span class="produtos__mostrar-mais__link">Ver tudo</span></a>
+          <img class="produtos__mostrar-mais__imagem" src="images/seta.png">
+        </div>
+      </div>
+      <div class="produtos__lista">
+        <div class="produtos__item">
+          <img class="produtos__item-imagem" src="images/console1.png" alt="Controle XYZ">
+          <p class="produto__item-titulo">Controle XYZ</p>
+          <p class="produto__item-descricao">R$ 60,00</p>
+          <a class="produto__item-link"><p>Ver produto</p></a>
+        </div>
+        <div class="produtos__item">
+          <img class="produtos__item-imagem" src="images/console2.png" alt="Controle e console XYZ">
+          <p class="produto__item-titulo">Controle e console XYZ</p>
+          <p class="produto__item-descricao">R$ 60,00</p>
+          <a class="produto__item-link"><p>Ver produto</p></a>
+        </div>
+        <div class="produtos__item">
+          <img class="produtos__item-imagem" src="images/console3.png" alt="Console XYZ">
+          <p class="produto__item-titulo">Console XYZ</p>
+          <p class="produto__item-descricao">R$ 60,00</p>
+          <a class="produto__item-link"><p>Ver produto</p></a>
+        </div>
+        <div class="produtos__item">
+          <img class="produtos__item-imagem" src="images/console4.png" alt="Controle XYZ">
+          <p class="produto__item-titulo">Controle XYZ</p>
+          <p class="produto__item-descricao">R$ 60,00</p>
+          <a class="produto__item-link"><p>Ver produto</p></a>
+        </div>
+        <div class="produtos__item">
+          <img class="produtos__item-imagem" src="images/console5.png" alt="Console XYZ">
+          <p class="produto__item-titulo">Console XYZ</p>
+          <p class="produto__item-descricao">R$ 60,00</p>
+          <a class="produto__item-link"><p>Ver produto</p></a>
+        </div>
+        <div class="produtos__item">
+          <img class="produtos__item-imagem" src="images/console6.png" alt="Game Boy Color">
+          <p class="produto__item-titulo">Game Boy Color</p>
+          <p class="produto__item-descricao">R$ 60,00</p>
+          <a class="produto__item-link"><p>Ver produto</p></a>
+        </div>
+      </div>
+      
+    </section>
+    <section class="produtos diversos container">
+      <div class="produtos__container">
+        <h2 class="produtos__titulo">Diversos</h2>
+        <div class="produtos__mostrar-mais">
+          <a href="#"><span class="produtos__mostrar-mais__link">Ver tudo</span></a>
+          <img class="produtos__mostrar-mais__imagem" src="images/seta.png">
+        </div>
+      </div>
+      <div class="produtos__lista">
+        <div class="produtos__item">
+          <img class="produtos__item-imagem" src="images/diversos1.png" alt="Produto XYZ">
+          <p class="produto__item-titulo">Camisa Atari</p>
+          <p class="produto__item-descricao">R$ 60,00</p>
+          <a class="produto__item-link"><p>Ver produto</p></a>
+        </div>
+        <div class="produtos__item">
+          <img class="produtos__item-imagem" src="images/diversos2.png" alt="Produto XYZ">
+          <p class="produto__item-titulo">Camisa SNES</p>
+          <p class="produto__item-descricao">R$ 60,00</p>
+          <a class="produto__item-link"><p>Ver produto</p></a>
+        </div>
+        <div class="produtos__item">
+          <img class="produtos__item-imagem" src="images/diversos3.png" alt="Produto XYZ">
+          <p class="produto__item-titulo">Controle e console XYZ</p>
+          <p class="produto__item-descricao">R$ 60,00</p>
+          <a class="produto__item-link"><p>Ver produto</p></a>
+        </div>
+        <div class="produtos__item">
+          <img class="produtos__item-imagem" src="images/diversos4.png" alt="Produto XYZ">
+          <p class="produto__item-titulo">Controle e console XYZ</p>
+          <p class="produto__item-descricao">R$ 60,00</p>
+          <a class="produto__item-link"><p>Ver produto</p></a>
+        </div>
+        <div class="produtos__item">
+          <img class="produtos__item-imagem" src="images/diversos5.png" alt="Produto XYZ">
+          <p class="produto__item-titulo">Controle e console XYZ</p>
+          <p class="produto__item-descricao">R$ 60,00</p>
+          <a class="produto__item-link"><p>Ver produto</p></a>
+        </div>
+        <div class="produtos__item">
+          <img class="produtos__item-imagem" src="images/diversos6.png" alt="Produto XYZ">
+          <p class="produto__item-titulo">Controle e console XYZ</p>
+          <p class="produto__item-descricao">R$ 60,00</p>
+          <a class="produto__item-link"><p>Ver produto</p></a>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer__container container">
+      <img class="footer__imagem" src="images/Logo.png" alt="Logo da Alura Geek">
+      <div class="footer-informacoes">
+        <ul class="footer-informacoes__lista">
+          <a class="footer-informacoes__link" href=""><li class="footer-informacoes__item">Quem somos nós</li></a>
+          <a class="footer-informacoes__link" href=""><li>Política de privacidade</li></a>
+          <a class="footer-informacoes__link" href=""><li>Programa fidelidade</li></a>
+          <a class="footer-informacoes__link" href=""><li>Nossas lojas</li></a>
+          <a class="footer-informacoes__link" href=""><li>Quero ser franqueado</li></a>
+          <a class="footer-informacoes__link" href=""><li>Anuncie aqui</li></a>
+        </ul>
+      </div>
+      <form class="footer-formulario" action="">
+        <h3 class="footer-formulario__titulo">Fale conosco</h3>
+        <label class="footer-formulario__label" for="footer-nome">Nome</label>
+        <input class="footer-formulario__nome" id="footer-nome" type="text" name="" id="" required>
+        <textarea class="footer-formulario__mensagem" name="" id="" cols="20" rows="5" placeholder="Escreva sua mensagem" required></textarea>
+        <input class="footer-formulario__botao" type="button" value="Enviar mensagem">
+      </form>
     </div>
-  </section>
+    <div class="footer-creditos">
+      <p class="footer-creditos__conteudo">Desenvolvido por Roni</p>
+      <span class="footer-creditos__ano">2022</span>
+    </div>
+    </footer>
+  </main>
 </body>
 </html>
